<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/loadingScreen"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/ImageView.Circle"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/border"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/border3"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/edit_picture"
        app:layout_constraintBottom_toBottomOf="@id/edit_picture"
        app:layout_constraintEnd_toEndOf="@id/edit_picture"
        app:layout_constraintTop_toTopOf="@id/edit_picture"
        app:shapeAppearanceOverlay="@style/ImageView.Circle"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/edit_picture"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_menu_camera"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="@+id/profile_picture"
        app:shapeAppearanceOverlay="@style/ImageView.Circle" />

    <View
        android:id="@+id/line"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/username_label"
        app:layout_constraintTop_toBottomOf="@id/edit_picture"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_field"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="John Doe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label"
        android:layout_marginTop="2dp"
        android:inputType="textPersonName"
        android:autofillHints="name"/>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_field"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="john.doe@gmail.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        android:layout_marginTop="2dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_field"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="Contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label"
        android:layout_marginTop="2dp"
        android:inputType="textPassword"
        android:autofillHints="password" />
    <EditText
        android:id="@+id/password2"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:hint="Repetir Contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="2dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password2"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
